Bug 480630 - Workspace switching OSD misses switching via overview effect or desktop grid
Summary: Workspace switching OSD misses switching via overview effect or desktop grid
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.93.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-01-31 21:12 UTC by Tammes Burghard
Modified: 2024-02-05 18:15 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tammes Burghard 2024-01-31 21:12:31 UTC
SUMMARY
***
The Workspace switching OCD displays arrows for the current motion. But these arrows seem to get their previous workspace from the last time the OCD was opened. This allows me to confuse them by switching workspace via the overview effect or desktop grid which does not trigger the OCD. When I then switch via gesture, the arrows report an incorrect motion.
***


STEPS TO REPRODUCE
1. Create four workspaces in a row and enter the first one
2. Open either the overview effect or the desktop grid via gesture
3. In one of these effects, navigate to the fourth workspace and enter it
4. switch back to the third workspace via three finger gesture

OBSERVED RESULT
4. The OCD shows arrows to the right on the first and second workspace indicating I moved from the first to the third workspace

EXPECTED RESULT
4. The OCD shows one arrow to the left on the fourth workspace

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.93.0
KDE Frameworks Version: 5.249.0
Qt Version: 6.7.0
Kernel Version: 6.7.2-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Pentium® CPU 4425Y @ 1.70GHz
Memory: 7.6 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 615
Manufacturer: Microsoft Corporation
Product Name: Surface Go 2
System Version: 1
Comment 1 Doug 2024-02-01 05:32:11 UTC
Can reproduce. Neon Testing, Plasma 5.92.90, Frameworks 5.249.0, Qt 6.6.1
Comment 2 Bug Janitor Service 2024-02-02 17:29:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5098
Comment 3 Vlad Zahorodnii 2024-02-05 17:36:51 UTC
Git commit 8f7f97148c51abd62406bd0b9ecdd5b102047531 by Vlad Zahorodnii.
Committed on 05/02/2024 at 17:17.
Pushed by vladz into branch 'master'.

plugins/desktopchangeosd: Fix previous desktop indicator

M  +2    -1    src/plugins/desktopchangeosd/package/contents/ui/main.qml
M  +23   -35   src/plugins/desktopchangeosd/package/contents/ui/osd.qml
M  +1    -1    src/scripting/workspace_wrapper.h

https://invent.kde.org/plasma/kwin/-/commit/8f7f97148c51abd62406bd0b9ecdd5b102047531
Comment 4 Vlad Zahorodnii 2024-02-05 18:15:52 UTC
Git commit e29f7656357c91baf0dbe5668b7894635b5575b6 by Vlad Zahorodnii.
Committed on 05/02/2024 at 18:09.
Pushed by vladz into branch 'Plasma/6.0'.

plugins/desktopchangeosd: Fix previous desktop indicator


(cherry picked from commit 8f7f97148c51abd62406bd0b9ecdd5b102047531)

M  +2    -1    src/plugins/desktopchangeosd/package/contents/ui/main.qml
M  +23   -35   src/plugins/desktopchangeosd/package/contents/ui/osd.qml
M  +1    -1    src/scripting/workspace_wrapper.h

https://invent.kde.org/plasma/kwin/-/commit/e29f7656357c91baf0dbe5668b7894635b5575b6