fix(plugin): fix previous desktop indicator in desktopchangeosd

BUG: 480630