plugins/scripts/desktopchangeosd/package/contents/ui/main.qml
@@ -15,10 +15,11 @@ Item {
 
     Connections {
         target: Workspace
-        function onCurrentDesktopChanged() {
+        function onCurrentDesktopChanged(previous) {
             if (!mainItemLoader.item) {
                 mainItemLoader.source = "osd.qml";
             }
+            mainItemLoader.item.show(previous);
         }
     }
 }
